Fix reset button z-index issue

--- a/client/stylesheets/partials/_bf.less
+++ b/client/stylesheets/partials/_bf.less
@@ -147,6 +147,7 @@
 		.bf__result__reset {
 			.button-fab();
 			.button-fab--inverse();
+			z-index: 99;
 		}
 	}
 
