--- a/client/stylesheets/partials/_bloom.less
+++ b/client/stylesheets/partials/_bloom.less
@@ -147,6 +147,7 @@
 		.bloom__result__reset {
 			.button-fab();
 			.button-fab--inverse();
+			z-index: 99;
 		}
 	}
 
